--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,16 @@
-<p>header works!</p>
+<mat-toolbar color="primary">
+  mySiteSuper
+
+  <span class="spacer"></span>
+  <span *ngIf="auth.user$ | async as user; else notauthenticated">
+    Logged in as {{ user.displayName}}
+    <button mat-raised-button (click)="auth.signOut()">Logout</button>
+  </span>
+
+  <ng-template #notauthenticated>
+    <button mat-raised-button (click)="auth.signIn()">Login with Google</button>
+  </ng-template>
+
+
+
+</mat-toolbar>
