--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
 
   <span class="spacer"></span>
   <span *ngIf="auth.user$ | async as user; else notauthenticated">
-    Logged in as {{ user.displayName}}
+    <!-- Logged in as {{ user.displayName}} -->
     <button mat-raised-button (click)="auth.signOut()">Logout</button>
   </span>
 
